comments added to every class